# Library-Management-System

./: CMakeLists.txt  README.md  main.cpp
Books/: BorrowRecord.h  clsBookManager.cpp  clsBookManager.h  clsBooks.cpp  clsBooks.h  clsBorrowedManager.h
Files/: BorrowedBookFile.h  UsersInfoFile.h  clsBooksFile.h
InputOutput/: InputOutputUser.cpp  InputOutputUser.h  clsInputOutputAdmin.cpp  clsInputOutputAdmin.h
Person/: clsAdmin.cpp  clsAdmin.h  clsUser.cpp  clsUser.h  clsUsersManager.cpp  clsUsersManager.h
Screens/: clsScreenAdmin.h  clsScreenUser.h
